<resources>
    <string name="app_name">MaxDRX</string>
    <string name="act_title">MaxDRX</string>

    <string name="blank"> </string>

    <string name="back_again_to_exit">Press back again to Exit!.</string>
    <string name="select_image_toast">Please select an image.</string>
    <string name="finished_in">Finished in </string>
    <string name="save_success">Save success. </string>
    <string name="something_wrong_on_file_save">Sorry, something went wrong, failed to save the file!. </string>
    <string name="something_wrong">Sorry, something went wrong!. </string>

    <string name="please_wait_for">Please wait for </string>
    <string name="please_wait">Please wait... </string>
    <string name="processes">processes</string>
    <string name="req_app_restart">Something went wrong, app restart recommended!.</string>



    <!-- Heads up tags -->
    <string name="pan_tag">pan</string>
    <string name="zoom_tag">zoom</string>
    <string name="rotate_tag">rotate</string>

    <!-- Heads up Headers -->
    <string name="primary">Preview</string>
    <string name="secondary">Secondary</string>
    <string name="independent">Independent</string>

    <string name="ref_independent">Reference</string>
    <string name="ref_primary">Reference to primary</string>
    <string name="ref_secondary">Reference to secondary</string>


    <string name="x">x</string>
    <string name="y">y</string>
    <string name="sensitivity">Sensitivity</string>
    <string name="coarse">Coarse</string>
    <string name="fine">Fine</string>
    <string name="intensity">Intensity</string>


    <!-- Tools -->
    <string name="apply">Apply</string>

    <!-- Image select -->
    <string name="set_as_reference">Set as reference</string>
    <string name="set_as_secondary">Set as secondary</string>

    <!-- Settings and options-->
    <string name="preview_quality">Preview quality</string>
    <string name="save_format_text">Save format</string>

    <string name="save">Save</string>
    <string name="auto">Auto</string>

    <string name="open">Open</string>
    <string name="settings">Settings</string>

    <string name="jpeg">jpeg</string>
    <string name="png">png</string>
    <string name="webp">webp</string>


</resources>